# canvas

./: Cargo.toml  README.md
examples/: contour.rs  contour2.rs  contour_gradient.rs  contour_gradient2.rs  contour_nautilus.rs  duffing.rs  duffing2.rs
examples/shader/: blend_150.glslf  canvas_150.glslf
src/: array.rs  canvas.rs  colormap.rs  contour.rs  integrate.rs  lib.rs  pen.rs  plot.rs  rng.rs
src/adapters/: image.rs
tests/: duffing.rs  test01.rs
