[package]
name = "canvas"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]

[dependencies]
rand = "*"
num = "*"
prefetch = "*"
tuple = { version = "*", git = "https://github.com/s3bk/tuple.git" }
palette = "*"
lazy_static = "*"
math = { version = "*", git = "https://github.com/s3bk/math.git" }
gfx_app = { git = "https://github.com/gfx-rs/gfx.git" }
gfx = { git = "https://github.com/gfx-rs/gfx.git", path = "src/render" }
gfx_core = { git = "https://github.com/gfx-rs/gfx.git", path = "src/core" }
#fmath = { version = "*", git = "https://github.com/s3bk/fmath.git" }
winit = "*"
simd = "*"

[dependencies.image]
version = "0.14"
default-features = false
features = ["png_codec"]

[dev-dependencies]
cpal = "*"
futures = "*"

[profile.release]
opt-level = 3
