[package]
name = "canvas"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]

[dependencies]
rand = "*"
tuple = { path = "../tuple", features = ["impl_serde", "impl_simd"] }
palette = "*"
lazy_static = "*"
#math = { version = "0.1.1", git = "https://github.com/s3bk/math.git" }
math = { path="../math", features=["simd"] }
gfx_app = { git = "https://github.com/gfx-rs/gfx.git" }
gfx = { git = "https://github.com/gfx-rs/gfx.git", path = "src/render" }
gfx_core = { git = "https://github.com/gfx-rs/gfx.git", path = "src/core" }
#fmath = { version = "*", git = "https://github.com/s3bk/fmath.git" }
winit = "0.6.0"
simd = "*"

[dependencies.image]
version = "0.14"
default-features = false
features = ["png_codec"]

[dev-dependencies]
cpal = "*"
futures = "*"
rusttype = "*"
serde = "*"
serde_derive = "*"
toml = "*"
fmath = { path = "../fmath" }

[profile.release]
opt-level = 3
