[package]
name = "canvas"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]

[dependencies]
rand = "*"
tuple = { git = "https://github.com/s3bk/tuple.git", features = ["impl_serde", "impl_simd"] }
palette = "*"
lazy_static = "*"
math = { git="https://github.com/s3bk/math.git" }
simd = "*"

[dependencies.image]
version = "0.14"
default-features = false
features = ["png_codec"]

[profile.release]
opt-level = 3
